<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#0A7B41"
        android:elevation="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="@string/txtLogin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="#FFF9F9"
        android:fontFamily="@font/poppins_semibold"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/titleLoginUsername"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_height="60dp"
        android:background="@mipmap/ic_filed"
        android:fontFamily="@font/poppins"
        android:hint="@string/titleLoginUsernameHint"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:background="#FFF9F9"
        android:fontFamily="@font/poppins_semibold"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/titleLoginPassword"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@mipmap/ic_filed"
        android:fontFamily="@font/poppins"
        android:hint="@string/titleLoginPasswordHint"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <CheckBox
        android:id="@+id/chkSaveLoginInfor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/titleSaveLoginInfo"
        android:textAlignment="textStart"
        android:textSize="18dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:background="@mipmap/ic_btn"
        android:elevation="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btnLogin"
        android:textColor="#fff"
        android:textSize="20sp" />

</LinearLayout>